--- a/Backend/Backend.Unit.Tests/Backend.Unit.Tests.csproj
+++ b/Backend/Backend.Unit.Tests/Backend.Unit.Tests.csproj
@@ -60,12 +60,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Brains\Modelhandler.Tests.Unit.cs" />
     <Compile Include="Brains\AddProductCBUnitTests.cs" />
     <Compile Include="ViewModels\AddProductVMUnittest.cs" />
     <Compile Include="Brains\ClientUnitTests.cs" />
     <Compile Include="ViewModels\MainWindowVMUnitTests.cs" />
     <Compile Include="Models\EventAggregatorUnitTests.cs" />
-    <Compile Include="Brains\PrjProtocolUnitTests.cs" />
+    <Compile Include="Brains\PrjProtokol.Test.Unit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
