--- a/Backend/Backend.Unit.Tests/Backend.Unit.Tests.csproj
+++ b/Backend/Backend.Unit.Tests/Backend.Unit.Tests.csproj
@@ -62,8 +62,10 @@
   <ItemGroup>
     <Compile Include="Brains\LSCUnitTests.cs" />
     <Compile Include="Brains\Modelhandler.Tests.Unit.cs" />
+    <Compile Include="ViewModels\AddCategoryViewModelUnitTests.cs" />
     <Compile Include="ViewModels\AddProductVMUnittest.cs" />
     <Compile Include="Brains\ClientUnitTests.cs" />
+    <Compile Include="ViewModels\DeleteCategoryViewModelUnitTests.cs" />
     <Compile Include="ViewModels\EditProductVMUnitTests.cs" />
     <Compile Include="ViewModels\MainWindowVMUnitTests.cs" />
     <Compile Include="Models\EventAggregatorUnitTests.cs" />
