Added EditCategoryVM unit tests + minor VM edits

--- a/Backend/Backend.Unit.Tests/Backend.Unit.Tests.csproj
+++ b/Backend/Backend.Unit.Tests/Backend.Unit.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ViewModels\AddProductVMUnittest.cs" />
     <Compile Include="Brains\ClientUnitTests.cs" />
     <Compile Include="ViewModels\DeleteCategoryViewModelUnitTests.cs" />
+    <Compile Include="ViewModels\EditCategoryViewModelUnitTests.cs" />
     <Compile Include="ViewModels\EditProductVMUnitTests.cs" />
     <Compile Include="ViewModels\MainWindowVMUnitTests.cs" />
     <Compile Include="Models\EventAggregatorUnitTests.cs" />
