--- a/KasseApparat/KasseApparat.Test.Integration/KasseApparat.Test.Integration.csproj
+++ b/KasseApparat/KasseApparat.Test.Integration/KasseApparat.Test.Integration.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>7fbf3795-a9c7-4386-acb0-1fe53261320b</ProjectGuid>
+    <ProjectGuid>{7FBF3795-A9C7-4386-ACB0-1FE53261320B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KasseApparat.Test.Integration</RootNamespace>
@@ -30,24 +30,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="ButtonContentAndShoppingList.Test.Integration.cs" />
+    <Compile Include="CategoriesMenuAndMenuCategory.Test.Integration.cs" />
+    <Compile Include="CategoriesMenuAndProductCategoryList.Test.Integration.cs" />
+    <Compile Include="DBcontrolAndConnection.Test.Integration.cs" />
+    <Compile Include="MenuCategoryAndProductButtonControl.Test.Integration.cs" />
+    <Compile Include="ProductButtonControlAndButtonContent.Test.Integration.cs" />
+    <Compile Include="ProductButtonControlAndShoppingList.Test.Integration.cs" />
+    <Compile Include="ProductCategoryListAndDBcontrol.Test.Integration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShoppingListAndDBcontrol.Test.Integration.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -57,5 +59,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-
- </Project>
+</Project>
