--- a/KasseApparat/KasseApparat.Test.Integration/KasseApparat.Test.Integration.csproj
+++ b/KasseApparat/KasseApparat.Test.Integration/KasseApparat.Test.Integration.csproj
@@ -30,6 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NSubstitute, Version=1.9.2.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\NSubstitute.1.9.2.0\lib\net45\NSubstitute.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,6 +55,15 @@
     <Compile Include="ProductCategoryListAndDBcontrol.Test.Integration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShoppingListAndDBcontrol.Test.Integration.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KasseApparat\KasseApparat.csproj">
+      <Project>{1fca1c8b-e899-48ae-b6b1-b9cc7e58a31c}</Project>
+      <Name>KasseApparat</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
