--- a/SharedLib/SharedLib/SharedLib.csproj
+++ b/SharedLib/SharedLib/SharedLib.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Models\PurchasedProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol\CmdMarshallers\CatalogueDetailsMarshal.cs" />
+    <Compile Include="Protocol\CmdMarshallers\FakeMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\Product\CreateProductMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\Product\DeleteProductMarshal.cs" />
     <Compile Include="Protocol\CmdMarshallers\Product\EditProductMarshal.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="Protocol\CmdMarshallers\RegisterPurchaseMarshal.cs" />
     <Compile Include="Protocol\Command.cs" />
     <Compile Include="Protocol\Commands\CatalogueDetailsCmd.cs" />
+    <Compile Include="Protocol\Commands\FakeCmd.cs" />
     <Compile Include="Protocol\Commands\Product\CreateProductCmd.cs" />
     <Compile Include="Protocol\Commands\Product\DeleteProductCmd.cs" />
     <Compile Include="Protocol\Commands\Product\EditProductCmd.cs" />
@@ -87,7 +89,6 @@
     <Compile Include="Sockets\CommandListener.cs" />
     <Compile Include="Threading\ThreadBase.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
