--- a/Backend/Backend.Tests.Integration/Backend.Tests.Integration.csproj
+++ b/Backend/Backend.Tests.Integration/Backend.Tests.Integration.csproj
@@ -51,7 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddCategoryTests.cs" />
     <Compile Include="AddProductTests.cs" />
+    <Compile Include="DeleteCategoryTests.cs" />
+    <Compile Include="EditProductCategoryTests.cs" />
     <Compile Include="EditProductTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
