Made style file

--- a/KasseApparat/KasseApparat/KasseApparat.csproj
+++ b/KasseApparat/KasseApparat/KasseApparat.csproj
@@ -99,6 +99,10 @@
     <Compile Include="ProductMenuControl\MenuCategory.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ShoppingList.cs" />
+    <Page Include="ButtonStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
